# TechnoparkCinema

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md  authdialog.cpp  authdialog.h  authdialog.ui  main.cpp  request.htpp  widget.cpp  widget.h  widget.ui
ApplicationServer/: CMakeLists.txt  readme.txt
ApplicationServer/Libraries/ExampleLibrary/: CMakeLists.txt
ApplicationServer/Libraries/ExampleLibrary/Source/: ExampleDialog.cpp
ApplicationServer/Libraries/ExampleLibrary/src/: ExampleDialog.cpp
ApplicationServer/Libraries/FCGIClient/: CMakeLists.txt
ApplicationServer/Libraries/FCGIClient/include/: FCGIClient.hpp
ApplicationServer/Libraries/Rooms/: CMakeLists.txt
ApplicationServer/Libraries/Rooms/include/: Rooms.hpp
ApplicationServer/Libraries/Rooms/src/: Rooms.cpp
ApplicationServer/Libraries/Rooms/test/: Test.cpp
ApplicationServer/Libraries/StaticBuilder/: CMakeLists.txt
ApplicationServer/Libraries/StaticBuilder/include/: AuthorizationPage.hpp  HotVideosPage.hpp  MainPage.hpp  RecommendationsPage.hpp  RoomPage.hpp  StaticBuilder.hpp  VideoPreviewBlock.hpp
ApplicationServer/Libraries/StaticBuilder/test/: main.cpp
ApplicationServer/Libraries/VideoPlayback/: CMakeLists.txt
ApplicationServer/Libraries/VideoPlayback/include/: VideoPlayback.hpp
ApplicationServer/Libraries/VideoPlayback/src/: VideoPlayback.cpp
ApplicationServer/Libraries/VideoPlayback/test/: Test.cpp
DatabaseServer/: backup_woosh  wooshDB
http_server/: CMakeLists.txt
http_server/HTTPClient/include/: HTTPClient.hpp
http_server/HTTPClient/src/: HTTPClient.cpp
http_server/async/include/: Listener.hpp  Master.hpp  Queue.hpp  Task.hpp  TaskBuilder.hpp  TaskFuncs.hpp  TasksController.hpp  Worker.hpp  msleep.hpp
http_server/async/src/: Listener.cpp  Master.cpp  Task.cpp  TaskBuilder.cpp  TaskFuncs.cpp  TasksController.cpp  Worker.cpp  msleep.cpp
http_server/include/: DatabaseManager.hpp  HttpProxy.hpp  HttpRequest.hpp  HttpRequestCreator.hpp  HttpResponse.hpp  HttpResponseReader.hpp  TemplateManager.hpp  content_types.hpp  exceptions.hpp  ports.hpp  request_methods.hpp
http_server/output/: server
http_server/socket/include/: socket.hpp
http_server/socket/src/: socket.cpp
http_server/src/: DatabaseManager.cpp  HttpRequest.cpp  HttpRequestCreator.cpp  HttpResponse.cpp  HttpResponseReader.cpp  TemplateManager.cpp  main.cpp  test.cpp
http_server/test/: main.cpp  test.cpp
linters/: run.sh
linters/cppcheck/cfg/: cppcheck-cfg.rng  std.cfg
linters/cpplint/: CPPLINT.cfg
pickle-rick-DataBase/libdatabase/include/: Admins.h  Competitors.h  IAdmins.h  ICompetitors.h  IContest.h  ILogs.h  ISessions.h  ITasks.h  IUsers.h  Logs.h  Static.h  Tasks.h
pickle-rick-DataBase/libdatabase/src/: Admins.cpp  Competitors.cpp  Logs.cpp  Static.cpp  Tasks.cpp
pickle-rick-DataBase/libdatabase/test/: test.cpp
static/: Index.html  IndexTemplate.html  index.html  index2.html  moviepage.html  style.css  stylemp.css  titles  watch.html
static/templates/: best.html  cast.html  rating.html  recommended.html
